--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "displayName": "jq Syntax Highlighting",
     "description": "Syntax support for the jq JSON command-line processor.",
     "version": "0.0.1",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/orentrutner/jq-syntax-highlighting.git"
+    },
     "publisher": "jq-syntax-highlighting",
     "engines": {
         "vscode": "^1.19.0"
